add yml configs

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,12 +2,8 @@ server:
   port: 8888
 
 spring:
-  application:
-    name: config-server
-
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/VadimUpdate/Configs
-          default-label: main  # или master, если у тебя так называется ветка
+  datasource:
+    url: jdbc:postgresql://localhost:5432/study
+    username: postgres
+    password: 9567632a
+    driver-class-name: org.postgresql.Driver
